<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f7f7f7"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:alpha="0.9"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_help"/>

                <LinearLayout
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/btnPertanyaanSatu"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Apakah Aminem itu?"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/jawabanSatu"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jawabanSatu"
                android:background="@drawable/bg_jawaban"
                android:visibility="gone"
                />
        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:alpha="0.9"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_document"/>

                    <LinearLayout
                        android:layout_marginLeft="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="8dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/btnPertanyaanDua"
                            android:padding="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Apa saja fitur yang dimiliki?"
                            android:textStyle="bold"
                            android:textSize="16dp"
                            />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/jawabanDua"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jawabanDua"
                    android:background="@drawable/bg_jawaban"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:alpha="0.9"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_electronic"/>

                    <LinearLayout
                        android:layout_marginLeft="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="8dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/btnPertanyaanTiga"
                            android:padding="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Apa yang dilakukan saat menemukan barang?"
                            android:textStyle="bold"
                            android:textSize="16dp"
                            />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/jawabanTiga"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jawabanTiga"
                    android:background="@drawable/bg_jawaban"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:alpha="0.9"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_key"/>

                    <LinearLayout
                        android:layout_marginLeft="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="8dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/btnPertanyaanEmpat"
                            android:padding="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Apa yang dilakukan saat kehilangan barang di sekitar kampus?"
                            android:textStyle="bold"
                            android:textSize="16dp"
                            />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/jawabanEmpat"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jawabanEmpat"
                    android:background="@drawable/bg_jawaban"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:alpha="0.9"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_profile"/>

                    <LinearLayout
                        android:layout_marginLeft="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="8dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/btnPertanyaanLima"
                            android:padding="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Tentang Autors"
                            android:textStyle="bold"
                            android:textSize="16dp"
                            />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/jawabanLima"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jawabanLima"
                    android:background="@drawable/bg_jawaban"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>



</ScrollView>